--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "gym_chargepal"}]
 
 [tool.poetry.dependencies]
 python = "^3.8,<3.12"
-gymnasium = "^0.29.0"
+gymnasium = "0.28.1"
 numpy = "1.23.5"
 pybullet = "^3.2.5"
 rigmopy = {path = "lib/rigmopy"}
