--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ python = "^3.8,<3.12"
 gymnasium = "0.28.1"
 numpy = "1.23.5"
 pybullet = "^3.2.5"
-rigmopy = {path = "lib/rigmopy"}
+rigmopy = {git = "git@git.ni.dfki.de:gjohn/rigmopy.git"}
 termcolor = "^2.3.0"
 rospkg = "^1.5.0"
 
